--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="coklat">#AA8F79</color>
     <color name="biru">#0000EE</color>
+    <color name="ijokomplit">#83DD55</color>
 </resources>
