order history done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="coklat">#AA8F79</color>
     <color name="biru">#0000EE</color>
     <color name="ijokomplit">#83DD55</color>
+    <color name="abu">#848181</color>
+    <color name="merahcancel">#F90000</color>
+    <color name="kuningbooked">#EDB95E</color>
 </resources>
