--- a/app/src/main/res/layout/fragment_orderhistory.xml
+++ b/app/src/main/res/layout/fragment_orderhistory.xml
@@ -21,11 +21,73 @@
             android:src="@drawable/sscreenshot_2024_02_27_093334_1_removebg_preview"
             android:visibility="visible" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order History"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            />
+
+        <View
+            android:layout_width="150dp"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_gravity="center_horizontal"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            >
+
+            <Button
+                android:layout_width="94.5dp"
+                android:layout_height="40dp"
+                android:text="All"
+                android:textSize="12dp"
+                android:textColor="@color/black"
+                android:backgroundTint="@color/abu"
+                />
+
+            <Button
+                android:layout_width="94.5dp"
+                android:layout_height="40dp"
+                android:text="Ongoing"
+                android:textAlignment="center"
+                android:textSize="12dp"
+                android:textColor="@color/black"
+                android:backgroundTint="@color/abu"
+                android:gravity="fill|center"
+                android:layout_marginHorizontal="25dp"
+                />
+
+            <Button
+                android:layout_width="94.5dp"
+                android:layout_height="40dp"
+                android:text="Finish"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:backgroundTint="@color/abu"
+                android:layout_gravity="end"
+                />
+
+        </LinearLayout>
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/recycler_view_orderhistory"
+            android:layout_marginHorizontal="20dp"
             >
 
         </androidx.recyclerview.widget.RecyclerView>
