accountmenu ui only, providerakun ui only

--- a/app/src/main/res/layout/fragment_orderhistory.xml
+++ b/app/src/main/res/layout/fragment_orderhistory.xml
@@ -86,7 +86,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/recycler_view_orderhistory"
+            tools:listitem="@layout/raw_orderhistory"
             android:layout_marginHorizontal="20dp"
             >
 
