--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -3,12 +3,322 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AccountMenuFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="56dp"
+            >
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/pp"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                app:srcCompat="@drawable/baseline_account_circle_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/namauser"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah1"
+                />
+
+            <TextView
+                android:id="@+id/namauser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Person"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/pp"
+                app:layout_constraintBottom_toTopOf="@id/email_field"
+                android:layout_marginStart="10dp"
+                />
+
+            <TextView
+                android:id="@+id/email_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="thisperson@gmail.com"
+                android:textSize="13sp"
+                app:layout_constraintTop_toBottomOf="@id/namauser"
+                app:layout_constraintStart_toStartOf="@id/namauser"
+                app:layout_constraintBottom_toTopOf="@id/nomorhp"
+                />
+
+            <TextView
+                android:id="@+id/nomorhp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+62XXXXXXXXXXX"
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="@id/namauser"
+                app:layout_constraintTop_toBottomOf="@id/email_field"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah1"
+                android:layout_marginBottom="5dp"
+                />
+            
+            <ImageView
+                android:id="@+id/pensileditprofile"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/baseline_edit_24"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah1"
+                />
+
+            <View
+                android:id="@+id/garispembatasbawah1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/abu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Account"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp"
+            />
+        
+        <View
+            android:layout_width="72dp"
+            android:layout_height="2dp"
+            android:background="#AA8F79"
+            android:layout_gravity="start"
+            android:layout_marginStart="11dp"
+            />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginHorizontal="8dp"
+            >
+
+            <ImageView
+                android:id="@+id/iconopsi"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_discount_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah2"
+                app:layout_constraintEnd_toStartOf="@id/tulisanpromo"
+                />
+
+            <TextView
+                android:id="@+id/tulisanpromo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:text="Promos"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah2"
+                app:layout_constraintStart_toEndOf="@id/iconopsi"
+                />
+
+            <ImageView
+                android:id="@+id/arrow"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_keyboard_arrow_right_24"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah2"
+                />
+
+            <View
+                android:id="@+id/garispembatasbawah2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/abu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginHorizontal="8dp"
+            >
+
+            <ImageView
+                android:id="@+id/iconopsi2"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_credit_card_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah3"
+                app:layout_constraintEnd_toStartOf="@id/tulisanpembayaran"
+                />
+
+            <TextView
+                android:id="@+id/tulisanpembayaran"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:text="Payment Method"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah3"
+                app:layout_constraintStart_toEndOf="@id/iconopsi2"
+                />
+
+            <ImageView
+                android:id="@+id/arrow2"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_keyboard_arrow_right_24"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah3"
+                />
+
+            <View
+                android:id="@+id/garispembatasbawah3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/abu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginHorizontal="8dp"
+            >
+
+            <ImageView
+                android:id="@+id/iconopsi3"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_language_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah4"
+                app:layout_constraintEnd_toStartOf="@id/tulisanbahasa"
+                />
+
+            <TextView
+                android:id="@+id/tulisanbahasa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:text="Change Language"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah4"
+                app:layout_constraintStart_toEndOf="@id/iconopsi3"
+                />
+
+            <ImageView
+                android:id="@+id/arrow3"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_keyboard_arrow_right_24"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah4"
+                />
+
+            <View
+                android:id="@+id/garispembatasbawah4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/abu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginHorizontal="8dp"
+            >
+
+            <ImageView
+                android:id="@+id/iconopsi4"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/mdi__customer_service"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah5"
+                app:layout_constraintEnd_toStartOf="@id/tulisancs"
+                />
+
+            <TextView
+                android:id="@+id/tulisancs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:text="Customer Service"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah5"
+                app:layout_constraintStart_toEndOf="@id/iconopsi4"
+                />
+
+            <ImageView
+                android:id="@+id/arrow5"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/baseline_keyboard_arrow_right_24"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/garispembatasbawah5"
+                />
+
+            <View
+                android:id="@+id/garispembatasbawah5"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/abu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </LinearLayout>
 
 </FrameLayout>
