--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -58,9 +58,11 @@
             android:id="@+id/recycler_view_feed"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            tools:listitem="@layout/rv_feed_search"
+            tools:listitem="@layout/raw_gridphoto"
             android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="9dp"/>
+            android:layout_marginHorizontal="9dp"
+            android:orientation="horizontal"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,8 +78,10 @@
             android:id="@+id/recycler_view_vendor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/rv_vendor_search"
+            tools:listitem="@layout/raw_vendor"
             android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="8dp"/>
+            android:layout_marginHorizontal="8dp"
+            android:orientation="vertical"
+            />
     </LinearLayout>
 </FrameLayout>
