--- a/app/src/main/res/menu/button_navigation_menu.xml
+++ b/app/src/main/res/menu/button_navigation_menu.xml
@@ -3,19 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/itemhome"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/baseline_home_24"
         android:title="Home" />
     <item
-        android:id="@+id/itemorderhistory"
+        android:id="@+id/orderHistoryFragment"
         android:icon="@drawable/baseline_history_24"
         android:title="Order History" />
     <item
-        android:id="@+id/itemsearch"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/baseline_search_24"
         android:title="Search" />
     <item
-        android:id="@+id/itemaccount"
+        android:id="@+id/accountFragment"
         android:icon="@drawable/baseline_account_circle_24"
         android:title="Account" />
 </menu>
