--- a/app/src/main/res/layout/activity_provider_account.xml
+++ b/app/src/main/res/layout/activity_provider_account.xml
@@ -31,28 +31,28 @@
 
             <TextView
                 android:id="@+id/idusername"
-                android:layout_width="wrap_content"
+                android:layout_width="165dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="javabride_co"
-                android:layout_marginStart="52dp"
+                android:layout_marginStart="43dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tombolback"
-                app:layout_constraintEnd_toStartOf="@id/verified"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-            
-            <ImageView
-                android:id="@+id/verified"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/baseline_verified_24"
-                android:layout_marginStart="8.6dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/idusername"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"/>
+<!--                />app:layout_constraintEnd_toStartOf="@id/verified"-->
+
+
+<!--            <ImageView-->
+<!--                android:id="@+id/verified"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/baseline_verified_24"-->
+<!--                android:layout_marginStart="8.6dp"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintStart_toEndOf="@id/idusername"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                />-->
 
             <FrameLayout
                 android:id="@+id/chat"
@@ -99,14 +99,26 @@
                 android:layout_marginHorizontal="23dp"
                 >
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/pp"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/kartu"
                     android:layout_width="86dp"
                     android:layout_height="86dp"
-                    app:srcCompat="@drawable/baseline_account_circle_24"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    />
+                    app:cardCornerRadius="100dp"
+                    >
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/pp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:srcCompat="@drawable/baseline_account_circle_24"
+                        android:scaleType="centerCrop"
+                        />
+
+
+                </androidx.cardview.widget.CardView>
+
 
                 <TextView
                     android:id="@+id/valuefollower"
@@ -116,7 +128,7 @@
                     android:textStyle="bold"
                     android:textSize="20sp"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/pp"
+                    app:layout_constraintStart_toEndOf="@id/kartu"
                     app:layout_constraintEnd_toStartOf="@id/valuerating"
                     />
 
@@ -183,14 +195,14 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/namauser"
+                    android:id="@+id/namavendor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Java Bride"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/pp"
+                    app:layout_constraintTop_toBottomOf="@id/kartu"
                     app:layout_constraintBottom_toTopOf="@id/deskripsi"
                     />
 
@@ -201,54 +213,29 @@
                     android:text="@string/deskripsiasal"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/namauser"
+                    app:layout_constraintStart_toStartOf="@id/namavendor"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ToggleButton
+        <Button
             android:layout_width="161dp"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             android:padding="0dp"
-            android:background="@drawable/bg_white_rounded"
             android:backgroundTint="@color/coklat"
-            android:textOn="Unfollow"
-            android:textOff="Follow"
+            android:text="Share"
             android:textSize="12sp"
             android:layout_gravity="center"
             />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tablayoutpostdanservice"
-            android:layout_width="match_parent"
-            android:layout_height="39.62dp"
-            app:tabIconTint="@color/coklat"
-            app:tabIndicatorColor="@color/coklat"
-            app:tabIndicatorFullWidth="true"
-            >
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/postgambar"
-                android:layout_width="wrap_content"
-                android:layout_height="33dp"
-                android:icon="@drawable/baseline_grid_on_24"/>
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/jasavendor"
-                android:layout_width="wrap_content"
-                android:layout_height="33dp"
-                android:icon="@drawable/eos_icons__service"
-                />
-
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/viewpagertab"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_marginTop="9.37dp"
-            android:layout_marginHorizontal="9dp"
+            tools:listitem="@layout/raw_vendor"
+            android:background="@drawable/coklat_gradient"
             />
 
 
