--- a/app/src/main/res/layout/fragment_orderhistory.xml
+++ b/app/src/main/res/layout/fragment_orderhistory.xml
@@ -3,23 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderHistoryFragment"
+    tools:context=".FragmentOrderHistory"
     android:background="@color/white"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:src="@drawable/sscreenshot_2024_02_27_093334_1_removebg_preview"
-            android:visibility="visible" />
+        android:orientation="vertical"
+        android:layout_marginTop="72dp"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,47 +32,47 @@
             android:layout_gravity="center_horizontal"
             />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="12dp"
-            android:gravity="center"
-            android:layout_marginTop="20dp"
-            >
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            android:gravity="center"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            >-->
 
-            <Button
-                android:layout_width="94.5dp"
-                android:layout_height="40dp"
-                android:text="All"
-                android:textSize="12dp"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/abu"
-                />
+<!--            <Button-->
+<!--                android:layout_width="94.5dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:text="All"-->
+<!--                android:textSize="12dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:backgroundTint="@color/abu"-->
+<!--                />-->
 
-            <Button
-                android:layout_width="94.5dp"
-                android:layout_height="40dp"
-                android:text="Ongoing"
-                android:textAlignment="center"
-                android:textSize="12dp"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/abu"
-                android:gravity="fill|center"
-                android:layout_marginHorizontal="25dp"
-                />
+<!--            <Button-->
+<!--                android:layout_width="94.5dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:text="Ongoing"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textSize="12dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:backgroundTint="@color/abu"-->
+<!--                android:gravity="fill|center"-->
+<!--                android:layout_marginHorizontal="25dp"-->
+<!--                />-->
 
-            <Button
-                android:layout_width="94.5dp"
-                android:layout_height="40dp"
-                android:text="Finish"
-                android:textColor="@color/black"
-                android:textSize="12dp"
-                android:backgroundTint="@color/abu"
-                android:layout_gravity="end"
-                />
+<!--            <Button-->
+<!--                android:layout_width="94.5dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:text="Finish"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="12dp"-->
+<!--                android:backgroundTint="@color/abu"-->
+<!--                android:layout_gravity="end"-->
+<!--                />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -88,6 +81,7 @@
             android:layout_height="match_parent"
             tools:listitem="@layout/raw_orderhistory"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="40dp"
             >
 
         </androidx.recyclerview.widget.RecyclerView>
