--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SearchMenuFragment"
+    tools:context=".FragmentSearchMenu"
     android:background="@drawable/coklat_gradient">
 
     <LinearLayout
@@ -16,20 +16,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp">
 
-            <Button
-                android:id="@+id/filterbutton"
-                android:layout_width="77dp"
-                android:layout_height="40dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/searchbar"
-                android:text="Filter"
-                android:textColor="@color/black"
-                android:textSize="13sp"
-                android:padding="0px"
-                android:backgroundTint="#D9D9D9"
-                android:layout_marginHorizontal="15dp"/>
+<!--            <Button-->
+<!--                android:id="@+id/filterbutton"-->
+<!--                android:layout_width="77dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/searchbar"-->
+<!--                android:text="Filter"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="13sp"-->
+<!--                android:padding="0px"-->
+<!--                android:backgroundTint="#D9D9D9"-->
+<!--                android:layout_marginHorizontal="15dp"/>-->
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchbar"
@@ -38,31 +38,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/filterbutton"
+                app:layout_constraintStart_toStartOf="parent"
                 android:background="@drawable/bg_white_rounded"
                 android:padding="0px"
-                android:layout_marginEnd="15dp"/>
+                android:layout_marginHorizontal="15dp"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Feed"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="15dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_feed"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            tools:listitem="@layout/raw_gridphoto"
-            android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="9dp"
-            android:orientation="horizontal"
-            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,6 +63,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginHorizontal="8dp"
             android:orientation="vertical"
+            android:scrollbars="vertical"
             />
     </LinearLayout>
 </FrameLayout>
